fix: vertical centering overflows on small viewports

--- a/src/login/resources/js/login.css
+++ b/src/login/resources/js/login.css
@@ -13,12 +13,12 @@ html {
 }
 
 .login {
-  display: flex;
+  padding-top: 4rem;
   position: absolute;
-  align-items: center;
-  justify-content: center;
+  display: flex;
   width: 100%;
   height: 100%;
+  overflow: scroll;
   pointer-events: none;
 }
 
@@ -28,6 +28,7 @@ html {
   align-items: center;
   width: 100%;
   pointer-events: auto;
+  margin: auto;
 }
 
 .login-header {
@@ -41,6 +42,7 @@ html {
 .login-card {
   padding: 40px 50px 50px;
   text-align: left;
+  margin-bottom: 2rem;
 }
 
 .login-settings {
